# video_cache_proxy

./: LICENSE  README.md
demo/android/: .gitignore  settings.gradle
demo/android/app/: build.gradle
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/res/drawable/: divider_12_h.xml
demo/android/app/src/main/res/layout/: activity_main.xml
demo/android/app/src/main/res/values/: strings.xml  themes.xml
demo/android/app/src/main/res/values-night/: themes.xml
demo/android/videocache/: .gitignore  build.gradle
demo/android/videocache/src/androidTest/java/com/jojo/videocache/: ExampleInstrumentedTest.java
demo/android/videocache/src/main/: AndroidManifest.xml
demo/android/videocache/src/main/cpp/: CMakeLists.txt  videocache.cpp
demo/android/videocache/src/main/java/com/demo/videocache/: CacheCallbackInfo.java  VideoCache.java  VideoCacheConfig.java  VideoCacheEventCallback.java
demo/harmony/: build-profile.json5
demo/harmony/.hvigor/cache/: file-cache.json  meta.json  task-cache.json
demo/harmony/.hvigor/dependencyMap/entry/: oh-package.json5
demo/harmony/.hvigor/dependencyMap/videocache/: oh-package.json5
demo/harmony/.hvigor/outputs/logs/details/: details.json
demo/harmony/.hvigor/outputs/sync/: fileCache.json  output.json
demo/harmony/.hvigor/report/: report-202409131228220680.json  report-202409131229501650.json  report-202409131229548200.json  report-202409131230339040.json  report-202409131230362960.json  report-202409131231000570.json  report-202409131232164840.json  report-202409131232333570.json  report-202409131233058200.json  report-202409131234598790.json
demo/harmony/AppScope/: app.json5
demo/harmony/AppScope/resources/base/element/: string.json
demo/harmony/entry/: oh-package-lock.json5  oh-package.json5
demo/harmony/entry/src/main/: module.json5
demo/harmony/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
demo/harmony/entry/src/main/ets/pages/: Index.ets
demo/harmony/entry/src/main/resources/base/element/: string.json
demo/harmony/entry/src/main/resources/zh_CN/element/: string.json
demo/harmony/harmony_videocache_demo/.hvigor/cache/: file-cache.json  task-cache.json
demo/harmony/harmony_videocache_demo/.hvigor/dependencyMap/: dependencyMap.json5  oh-package.json5
demo/harmony/harmony_videocache_demo/.hvigor/dependencyMap/entry/: oh-package.json5
demo/harmony/harmony_videocache_demo/.hvigor/dependencyMap/videocache/: oh-package.json5
demo/harmony/harmony_videocache_demo/.hvigor/outputs/build-logs/: build.log.1  build.log.2  build.log.3  build.log.4  build.log.5  build.log.6  build.log.7  build.log.8  build.log.9
demo/harmony/harmony_videocache_demo/.hvigor/outputs/logs/details/: details.json
demo/harmony/harmony_videocache_demo/.hvigor/outputs/sync/: fileCache.json  output.json
demo/harmony/harmony_videocache_demo/.hvigor/report/: report-202408222358049710.json  report-202408230001464330.json  report-202408230002232270.json  report-202408230003414530.json  report-202408230011202440.json  report-202408230013083600.json  report-202408230022199570.json  report-202408230022344710.json  report-202408230023496470.json  report-202408230024001390.json
demo/harmony/harmony_videocache_demo/entry/.preview/: PreviewBuildParam.json
demo/harmony/harmony_videocache_demo/entry/.preview/config/: buildConfig.json
demo/harmony/harmony_videocache_demo/oh_modules/@ohos/hypium/: CHANGELOG.md
demo/harmony/oh_modules/.ohpm/@arch+cicadaplayer@0.0.24-SNAPSHOT/oh_modules/@arch/cicadaplayer/: Index.ts  oh-package.json5  push-xjjj-repo.sh
demo/harmony/oh_modules/.ohpm/@arch+cicadaplayer@0.0.24-SNAPSHOT/oh_modules/libcicadaplayer.so/: oh-package.json5
demo/harmony/oh_modules/.ohpm/oh_modules/@arch/cicadaplayer/: BuildProfile.ets
demo/harmony/oh_modules/.ohpm/oh_modules/@ohos/hypium/: index.ets  index.js  oh-package.json5
demo/harmony/oh_modules/@ohos/hypium/src/main/: interface.js  module.json  service.js
demo/harmony/videocache/: BuildProfile.ets  Index.ets  oh-package-lock.json5  oh-package.json5  push-xjjj-repo.sh
demo/harmony/videocache/src/main/: module.json5
demo/harmony/videocache/src/main/cpp/: CMakeLists.txt  napi_init.cpp
demo/harmony/videocache/src/main/cpp/types/libvideocache/: oh-package.json5
demo/harmony/videocache/src/main/ets/native/: MediaCacheService.ets
demo/harmony/videocache/src/ohosTest/: module.json5
script/: build-libevent-android.sh  build-libevent-harmony.sh  build-openssl-android.sh  build-openssl-harmony.sh
tests/: CMakeLists.txt  hashmap-test.cpp  http-common-test.cpp  http-hls-test.cpp  http-mp4-test.cpp  http-proxy-api-test.cpp  http-proxy-api-test.hpp  http-request-test.cpp  main.cpp  video-cache-test.cpp
video_cache_proxy.xcodeproj/: project.pbxproj
video_cache_proxy.xcodeproj/project.xcworkspace/xcuserdata/mingo.xcuserdatad/xcdebugger/: Expressions.xcexplist
video_cache_proxy.xcodeproj/xcshareddata/xcschemes/: video_cache_unittest.xcscheme
video_cache_proxy.xcodeproj/xcuserdata/mingo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
video_cache_proxy.xcodeproj/xcuserdata/mingo.xcuserdatad/xcschemes/: xcschememanagement.plist
(+54 files in other folders)
